k8s/network-of-terms-api/network-of-terms-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-of-terms-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: network-of-terms-api
  template:
    metadata:
      labels:
        app: network-of-terms-api
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/network-of-terms-api
          ports:
            - containerPort: 3123
      imagePullSecrets:
        - name: ghcr
