k8s/network-of-terms-api/network-of-terms-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: network-of-terms-api
spec:
  ports:
    - port: 80
      targetPort: 3123
  selector:
    app: network-of-terms-api
