k8s/network-of-terms-api/network-of-terms-api-ingress.yml
# See https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-of-terms-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - termennetwerk-api.netwerkdigitaalerfgoed.nl
      secretName: termennetwerk-api-tls
  rules:
    - host: termennetwerk-api.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: network-of-terms-api
                port:
                  number: 80
